# trans-misja

./: .gitmodules  Cargo.toml  Dockerfile
burn-model/: Cargo.toml
gui/: Cargo.toml
gui/src/: wav.rs
src/: app_state.rs  console_command.rs  gaussian_blur.rs  main.rs  settings.rs  settings_logic.rs  ui.rs  ui_elements.rs  ui_logic.rs  wav.rs
