[package]
name = "trans-misja"
version = "0.1.0"
edition = "2021"

[dependencies]
gio = "0.20.9"
glib-macros = "0.20.7"
gtk4 = { version="0.9.6", features = ["v4_10"]}
gtk4-sys = "0.9.6"
hound = "3.5.1"
image = "0.25.6"
ort = { version="=2.0.0-rc.9", features = [ "cuda" ] }
rayon = "1.10.0"
ndarray = "0.16.1"
sysinfo = "0.33.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
async-channel = "2.3.1"
